--- a/src/components/ProgressBar/styles.scss
+++ b/src/components/ProgressBar/styles.scss
@@ -17,7 +17,7 @@
 }
 
 .currentProgress {
-  width: 80%;
+  width: 100%;
   display: flex;
 
   padding: 0px 10px;
