--- a/src/containers/ControlButtons/style.scss
+++ b/src/containers/ControlButtons/style.scss
@@ -1,10 +1,16 @@
 @import "../../styles/colors.scss";
 
+.controlButtonsContainer {
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+}
+
 .controlButtons {
   width: 80%;
+  max-width: 300px;
   height: 23%;
-
-	padding: 0px 10%;
+  padding: 0px 10%;
 
   display: flex;
   flex-direction: row;
@@ -12,6 +18,8 @@
   justify-content: space-between;
 }
 
-PlayButton {
-  font-size: 20pt;
+@media (min-aspect-ratio: 1/1) {
+  .controlButtons {
+    
+  }
 }
