--- a/src/containers/PlayerScreen/styles.scss
+++ b/src/containers/PlayerScreen/styles.scss
@@ -1,6 +1,6 @@
 .playerScreen {
   width: 100%;
-  height: calc(77% - 36px);
+  height: calc(100% - 120px);
 
   position: relative;
   display: flex;
